2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

2004-09-29  Bastien Nocera  <hadess@hadess.net>

	* gnome-settings-multimedia-keys.c: (dialog_show): rework the
	dialog_show so that the dialog is moved before it's shown, and
	use gdk_display_sync() instead of a event looping to avoid
	"reentrancy" problems when showing/hiding the dialog in fast
	successions (Closes: #144490)

2004-09-29  Bastien Nocera  <hadess@hadess.net>

	* actions/acme-volume-gstreamer.c: (acme_volume_gstreamer_init):
	better way to look for the volume track (patch by Michal Bukovjan
	<bukovjan@mbox.dkm.cz>) (Closes: #153866)

2004-09-27  Sergey V. Udaltsov  <svu@gnome.org>

	* gnome-settings-keyboard-xkb.c: fix one GSwitchItXkbConfig memory
	leak, spotted by kmaraas.

2004-08-30  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gnome-settings-multimedia-keys.c: applied patch from Pierre Ossman
	<drzeus-bugzilla@drzeus.cx> to display the volume dialog in the
	correct place. Fixes #144490

2004-08-22  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* actions/acme-fb-level.c: Use the parent type in the G_DEFINE_TYPE
	macro, not its own type (fixes rh #130473).

2004-07-16  Bastien Nocera  <hadess@hadess.net>

	* actions/acme-volume-alsa.c: (acme_volume_alsa_finalize),
	(acme_volume_alsa_close_real), (acme_volume_alsa_open),
	(acme_volume_alsa_init): fix a crash when there aren't any ALSA mixers
	(or soundcards) present on the system

2004-07-15  Bastien Nocera  <hadess@hadess.net>

	* actions/acme-volume-oss.c: fix OSS compilation on NetBSD

2004-07-15  Bastien Nocera  <hadess@hadess.net>

	* actions/acme-volume-alsa.c: (acme_volume_alsa_finalize),
	(acme_volume_alsa_set_mute), (acme_volume_alsa_get_mute),
	(acme_volume_alsa_get_volume), (acme_volume_alsa_set_volume),
	(acme_volume_alsa_close_real), (acme_volume_alsa_open),
	(acme_volume_alsa_close), (acme_volume_alsa_init):
	rework the ALSA mixer so that:
	- the ALSA device isn't kept open at all times, only for 4 seconds